# clean_wallet

./: .env  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
clean-backend/: README.md  pyproject.toml
clean-backend/src/: alembic.ini  faststream.sh  prestart.sh
clean-backend/src/clean_backend/: __init__.py  app.py  fs_app.py  fs_serve_app.py
clean-backend/src/clean_backend/application/dto/: __init__.py  wallet.py
clean-backend/src/clean_backend/application/interactors/: __init__.py  create_user.py  create_wallet.py  get_user.py  get_users.py  get_wallet.py  get_wallets.py  wallet_operation.py
clean-backend/src/clean_backend/application/interfaces/: __init__.py  transaction_manager.py  user.py  wallet.py
clean-backend/src/clean_backend/config/: __init__.py  app.py  database.py  settings.py
clean-backend/src/clean_backend/config/envs/: .env  .env.template  .env.test
clean-backend/src/clean_backend/config/yaml/: default.yaml
clean-backend/src/clean_backend/controllers/amqp/: users.py
clean-backend/src/clean_backend/controllers/schemas/: __init__.py  wallet.py
clean-backend/src/clean_backend/domain/: wallet.py  wallet_operation.py
clean-backend/src/clean_backend/infrastructure/: broker.py  db.py
clean-backend/src/clean_backend/infrastructure/gateways/: __init__.py  user_gateway.py  wallet_gateway.py
clean-backend/src/clean_backend/infrastructure/migrations/: env.py
clean-backend/src/clean_backend/infrastructure/models/: __init__.py  base.py  wallet.py
clean-backend/src/clean_backend/ioc/: __init__.py  app.py
tests/: conftest.py  (+3 more)
(+8 files in other folders)
