[project]
name = "clean_backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "", email = "" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dishka>=1.9.1",
    "dishka-faststream>=0.6.0",
    "faker>=40.11.1",
    "fastapi[standard]>=0.135.1",
    "faststream[rabbit]>=0.6.7",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.2",
    "pytest-asyncio",
    "sqlalchemy[asyncio]>=2.0.48",
    "uuid7>=0.1.0",
    "uvicorn>=0.42.0",
]

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
